// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`issue brief > makes the design proposal the report of a run in Analysis 1`] = `
"Issue PM-12: Fix login on Safari

You have been given this issue to work on. Do the work it asks for.
Someone commented on the issue you are working on. Take it into account.

When you finish:
- Include whether you recommend a preview and why. Read the current preference with \`nb-studio preview status\`; a recommendation or design approval does not change it. Only change the preview preference when the person explicitly asks.
- If you wrote or revised the proposal, submit it with \`nb-studio issue design-proposal PM-12 --content-file proposal.md\`: it is your report, and submitting moves the issue to proposal_review. End your turn without a comment restating or summarising it.
- If you only answered comments, end your turn."
`;

exports[`issue brief > renders the task and the issue context 1`] = `
"Issue PM-12: Fix login on Safari

You have been given this issue to work on. Do the work it asks for.
Someone commented on the issue you are working on. Take it into account.

When you finish:
- Post a comment on PM-12 that says what you did and what is left, with links to branches or pull requests.
- Move the issue to the status that fits (\`nb-studio issue update PM-12 --status <status>\`); you may move it to: in_review."
`;

exports[`issue brief > renders the task and the issue context 2`] = `
"# PM-12 Fix login on Safari

- Status: In progress (in_progress, started)
- Priority: high
- Owner: Alice
- Labels: bug, frontend
- Due: 2026-10-15
- Project: Web
- Parent: PM-10 Login reliability
- Statuses: backlog, todo, in_progress, in_review, done

## Description

Signing in fails on Safari 17.

See the attached HAR.

## Working directories

- https://example.com/acme/web.git (develop) [primary]
- data: /srv/data (a directory on one machine)

## Attachments

- safari.har (application/json, 48213 bytes) [0b9a3c52-7d1e-4f3a-9c55-2f1d8e6a4b10]

## Sub-issues

- PM-13 Add a test (todo)

## Checklist (incomplete)

- [x] Reproduce (required)
- [ ] Add a test

## Recent comments

### Bob at 2026-10-01T08:00:00.000Z

登录按钮点了没反应。

Attached: 截图.png (image/png, 20480 bytes) [5c1f0e2a-3b4d-4e6f-8a9b-0c1d2e3f4a5b]"
`;

exports[`issue brief > tells an agent the workflow does not let it move the status 1`] = `
"Issue PM-12: Fix login on Safari

Continue the work on this issue.

When you finish:
- Post a comment on PM-12 that says what you did and what is left, with links to branches or pull requests.
- Leave the status as it is: the workflow does not let you move it from here."
`;
